Dillon's client meeting notes - WIP

--- a/Notes/u14035538_Client_Meeting_Notes.tex
+++ b/Notes/u14035538_Client_Meeting_Notes.tex
@@ -1,5 +1,26 @@
-\documentclass[11pt]{article}
+\documentclass{article}
 
 \begin{document}
-Test document
+
+\begin{titlepage}
+	\begin{center}
+		\line(1,0){300}\\
+		[6mm]
+		\huge{\bfseries Client Meeting Notes}\\
+		[2mm]
+		\line(1,0){200}\\
+		[15mm]
+		\textsc{\large COS301}\\
+		[7.5mm]
+		\textsc{\large Software Requirements Specification}\\
+		[10cm]
+	\end{center}
+	
+	\begin{flushright}
+		\textsc{\large Dillon Heins\\
+		14035538\\
+		16 February 2016\\}
+	\end{flushright}
+\end{titlepage}
+
 \end{document}
