--- a/Notes/u14035538_Client_Meeting_Notes.tex
+++ b/Notes/u14035538_Client_Meeting_Notes.tex
@@ -1,5 +1,19 @@
 \documentclass{article}
 
+\usepackage{lipsum}
+\usepackage[margin=2.5cm, left=2cm, includefoot]{geometry}
+
+% Header and footer
+\usepackage{fancyhdr}
+\pagestyle{fancy}
+
+\fancyhead{}
+\fancyfoot{}
+\fancyfoot[R]{\thepage}
+\renewcommand{\headrulewidth}{0pt}
+\renewcommand{\footrulewidth}{0pt}
+%
+
 \begin{document}
 
 \begin{titlepage}
@@ -23,4 +37,33 @@
 	\end{flushright}
 \end{titlepage}
 
+% Table of contents
+\tableofcontents
+\thispagestyle{empty}
+\cleardoublepage
+%
+
+% Main body
+\pagenumbering{arabic}
+\setcounter{page}{1}
+%
+
+\section{General Vision}\label{sec:vision}
+	\begin{itemize}
+		\item A system which allows researchers at the University of Pretoria (specifically within the Computer Science Department) to keep track of the publications which they are currently working on.
+		\item This system must also keep track of historical publications so as to allow researchers to maintain a history of their work.
+		\item The system should allow the heads of the research groups to manage their group's papers as well as to keep track of all publications under their group.
+		\item The head of the Computer Science department, within this system, should be able to view all research groups so as to enable him/her to manage the department's research goals.
+	\end{itemize}
+
+\section{Users}\label{sec:users}
+	\begin{itemize}
+		\item Number of users:
+		\begin{itemize}
+			\item Members of the department
+			\item Under 100
+		\end{itemize}
+		\item System must be able to support all users working at the same time on the system
+	\end{itemize}
+	
 \end{document}
