Dillon's client metting notes - User section completed

--- a/Notes/u14035538_Client_Meeting_Notes.tex
+++ b/Notes/u14035538_Client_Meeting_Notes.tex
@@ -60,10 +60,50 @@
 	\begin{itemize}
 		\item Number of users:
 		\begin{itemize}
-			\item Members of the department
-			\item Under 100
+			\item Members of the department.
+			\item Under 100.
 		\end{itemize}
 		\item System must be able to support all users working at the same time on the system
+		\item Only staff members of the University of Pretoria are \textit{users} of the system.
+		\begin{itemize}
+			\item Staff members act as representatives of student authors when adding them to a paper.
+		\end{itemize}
+		\item User hierarchy:
+		\begin{itemize}
+			\item There exists a hierarchy in terms of the privileges which each type of user is granted.
+			\item User types:
+			\begin{itemize}
+				\item Administrative user:
+				\begin{itemize}
+					\item This user is the HOD and one other possible admin.
+					\item Can view all users.
+					\item Can add users to system.
+					\item Administrative rights.
+				\end{itemize}
+				\item Head of research group:
+				\begin{itemize}
+					\item See all research group members' papers.
+				\end{itemize}
+				\item General user:
+				\begin{itemize}
+					\item Can only see papers which they have authored themselves or co-authored
+					\item Users cannot see other user's publications, only their own
+				\end{itemize}
+			\end{itemize}
+			
+		\end{itemize}
+	\end{itemize}
+	
+\section{Document Entries}\label{sec:docs}
+	\begin{itemize}
+		\item No documents will be stored within the system itself.
+		\begin{itemize}
+			\item Only the meta-data of documents will be stored.
+		\end{itemize}
+		\item A document entry consists of:
+		\begin{itemize}
+			\item Paper title.
+		\end{itemize}
 	\end{itemize}
 	
 \end{document}
