Dillon's client meeting notes - Completed

--- a/Notes/u14035538_Client_Meeting_Notes.tex
+++ b/Notes/u14035538_Client_Meeting_Notes.tex
@@ -1,17 +1,18 @@
 \documentclass{article}
 
-\usepackage{lipsum}
-\usepackage[margin=2.5cm, left=2cm, includefoot]{geometry}
+\usepackage[margin=2.5cm,left=2cm,includefoot]{geometry}
 
 % Header and footer
 \usepackage{fancyhdr}
 \pagestyle{fancy}
 
-\fancyhead{}
+\rhead{COS301 Client Meeting Notes - \LaTeX}
+\lhead{Dillon Heins - u14035538}
 \fancyfoot{}
-\fancyfoot[R]{\thepage}
-\renewcommand{\headrulewidth}{0pt}
-\renewcommand{\footrulewidth}{0pt}
+\fancyfoot[R]{Page \thepage}
+
+\renewcommand{\headrulewidth}{2pt}
+\renewcommand{\footrulewidth}{1pt}
 %
 
 \begin{document}
