Arno - Started Client meeting requirement
Added:
-Introduction
-User

--- a/Notes/u14011396_Client_Meeting_Notes.tex
+++ b/Notes/u14011396_Client_Meeting_Notes.tex
@@ -1,1 +1,52 @@
+\documentclass[12pt, letterpaper, twoside]{article}
+\usepackage[utf8]{inputenc}
+ 
+\title{Client Requirement Notes}
+\author{Arno Grobler - u14011396}
+\date{17 February 2016}
+ 
+\begin{document}
+ 
+\begin{titlepage}
+\maketitle
+\end{titlepage}
+ 
+\tableofcontents
+\newpage
 
+\section{Introduction}
+
+This project is a Research Support System. Its main purpose is to keep track of many aspects that are regularly needed by researchers and a easy way for research heads or HOD of the respective facility to be able to see progress that has been made by the researchers in their team.
+
+Scope for this project is only the Computer Science department and its respective lecturers and leaders.
+General uses of this system should include keeping track of:
+\begin{itemize}  
+
+    \item Research Papers
+
+    \item Reports, of which has different types
+    \item Research Groups
+    \item Running Costs
+    \item Historical publications
+    \item List of Authors
+    \item List of Users
+    \item Units 
+
+\end{itemize}
+{\textit{On a side note, it was mentioned to use a software called MagicDraw to draw our diagrams for planning}}
+\section{Users}
+\begin{itemize}  
+
+    \item Users can only be users if they belong to the department, and no more than 100 can be expected.
+    \item Temporary positions are allowed (this includes postgrad students).
+    \item All users must be able to log on and work concurrently, however conflicts of changes made to publications should be handled in natural order.
+    \item For every paper entered into the system, at least one staff Representative should be added.
+    \item Cannot add paper without any authors.
+    \item Authors do not necessarily have to be users(such as students, other university lecturers), but a user has to be a author if they have put a publication into the system unless done so by a higher power in the hierarchy(such as HOD, research leader)
+    \item Authors are added in sequence, e.g. 1st Author, 2nd Author, 3rd Author ...
+    \item Units 
+
+\end{itemize}
+
+ 
+\end{document}
