Software requirements specification - Draft background completed

--- a/Documentation/SoftwareRequirements.tex
+++ b/Documentation/SoftwareRequirements.tex
@@ -86,7 +86,25 @@
 		\end{itemize}
 	\cleardoublepage
 	\section{Background}\label{sec:background}
-		The reason
+		Reasons for the development of this project include but are not limited to:
+		\begin{itemize}
+			\item Research opportunities:
+			\begin{itemize}
+				\item Through the monitoring of units earned by staff members it enables the progression of research opportunities for the \textit{University of Pretoria's} Computer Science Department. By monitoring units earned the department is able to ensure that it meets its goals and is able to secure funding opportunities.
+			\end{itemize}
+			\item Opportunities to simplify some aspect of work:
+			\begin{itemize}
+				\item The method in use by the department currently is to have all researchers edit the same Microsoft Excel document as their manner of managing and tracking publications and units earned.
+				\item This method is inefficient as well as error prone and has hence lead to the need to create this system as a means to replace it.
+				\item This system aims to allow for all researchers to be able to manage their own publications in their own user space. It also allows for the Head of Department to no longer have to use an Excel document to create reports from, instead he/she would be able to use the system to the work for him/her in a far more accurate and efficient manner.
+			\end{itemize}
+			\item Problems the client is currently facing:
+			\begin{itemize}
+				\item The problem of having all members of a department trying to collaborate on a single Excel document.
+				\item The problem of having personal and academic information visible to all who have access to this document.
+				\item The problem of managing this data in such a way as to get valuable and meaningful information out of it quickly and accurately.
+			\end{itemize}
+		\end{itemize}
 		
 	\cleardoublepage
 	\section{Architecture Requirements}\label{sec:architecture}
