Arno - Client meeting requirement - Almost Complete
Added
-Last few headings

--- a/Notes/u14011396_Client_Meeting_Notes.tex
+++ b/Notes/u14011396_Client_Meeting_Notes.tex
@@ -68,6 +68,29 @@ General uses of this system should include keeping track of:
     \item Authors should have some metadata attached to them. This includes their full name, where they are from, qualifications, etc
     \item A user should be able to add authors and specify if someone is a author
     \item Authors previously entered should not have to be entered again, instead be shown as an option.
+    \item Users should see a list of all authors/users, maybe a mini profile of each with restricted information
 
 \end{itemize}
+ \section{Publications}
+ \begin{itemize}  
+
+    \item One publication could belong to many research groups, but must belong to at least one.
+
+    \item No physical links must be made, only links to relevant places.
+    
+    \item Metadata - includes list of authors, type(conference, journal,...),venue(optional), units(given to each user when submitted), reasons for termination of publication(should be revivable), deadlines, how many times this paper has been rejected.
+
+\end{itemize}
+ \section{Structure}
+  \begin{itemize}  
+
+    \item Both Android and Website must be able to be used interchangeably. Website should have a mobile component.
+
+    \item Database system is to the programmers discretion
+    
+    \item Reminders for deadlines should be in place for all users of specific publication. This is done through email.
+    \item No external program linking, such as Google Calender, will be needed
+\end{itemize}
+
+ 
 \end{document}
