--- a/Notes/u14035538_Client_Meeting_Notes.tex
+++ b/Notes/u14035538_Client_Meeting_Notes.tex
@@ -89,6 +89,7 @@
 					\item can view all users
 					\item can add users to system
 					\item administrative rights
+					\item ability to edit/add more research groups
 				\end{itemize}
 				\item Head of research group:
 				\begin{itemize}
