Software requirements specification - Draft quality requirements completed

--- a/Documentation/SoftwareRequirements.tex
+++ b/Documentation/SoftwareRequirements.tex
@@ -156,23 +156,28 @@
 				\end{itemize}
 				\item Maintainability
 				\begin{itemize}
-					\item
+					\item The system should have as few bugs as possible so as to prevent having to constantly maintain it in the future.
+					\item The system should be built in a modular way so that all services are decoupled in such a manner that allows for the extension of the system at a later stage.
 				\end{itemize}
 				\item Auditability/monitorability
 				\begin{itemize}
-					\item
+					\item Every action performed by a user should be logged and all details about said action should be stored.
+					\item These actions should be visible to admin users.
 				\end{itemize}
 				\item Integrability
 				\begin{itemize}
-					\item
+					\item User's document entries should not be able to be deleted, if it is a case where the document will not be completed it should remain in the system and be terminated.
+					\item A user with no admin rights should not have access to admin privileges so that the system's data may remain integrable and safe.
+					\item The system should not ever be in a state where it is under pressure and the data is at risk of becoming corrupted. The system should be designed to handle the pressure for which it has been specified to handle.
 				\end{itemize}
 				\item Cost
 				\begin{itemize}
-					\item
+					\item All software used should not be proprietary but rather open source so as to minimise cost as much as possible.
 				\end{itemize}
 				\item Usability
 				\begin{itemize}
-					\item
+					\item The interface should be lightweight.
+					\item The interface should be intuitive to use as well as obey Human Computer Interaction guidelines so that it is efficient and easy to use.
 				\end{itemize}
 			\end{itemize}
 		
