Added format for use case information and description

--- a/Documentation/SoftwareRequirements.tex
+++ b/Documentation/SoftwareRequirements.tex
@@ -197,40 +197,69 @@
 		
 	\cleardoublepage
 	\section{Functional Requirements and Application Design}\label{sec:functional}
-		\subsection{Use Case Prioritization}
+		\subsection{Use Case Prioritization}\label{subsec:usecasepriorotization}
 			\begin{description}
-			  \item[Critical:] The first item
-			  \item[Important:] The second item
-			  \item[Nice-to-Have:] The third etc \ldots
+			  \item[Critical:] Use cases that are absolutely essential 
+			  	\begin{itemize}
+			  		\item 
+			  		\item
+			  	\end{itemize}
+			  \item[Important:] Use cases that contribute significantly,
+			   but the system can function without
+			  	\begin{itemize}
+			  		\item 
+			  		\item
+			  	\end{itemize}
+			  \item[Nice-to-Have:] Use cases that contribute insignificantly to the system
+			  	\begin{itemize}
+			  		\item 
+			  		\item
+			  	\end{itemize}
 			\end{description}
 			
-		\subsection{Use Case/ Service Contracts}
+		\subsection{Use Case/ Service Contracts}\label{subsec:servicecontracts}
+		Each use case is discussed in detail in this section
+		%We can use this formatting per use case
+			\subsubsection{"use case name"}
 			\begin{description}
-			  \item[Pre-conditions:] The first item
-			  \item[Post-conditions:] The second item
-			  \item[Request and Results Data structures:] The third etc \ldots
+			\item[Description:] "description of the use case"
+				\item[Pre-conditions:]
+			  	\begin{itemize}
+			  		\item 
+			  		\item
+			  	\end{itemize}
+			  \item[Post-conditions:] 
+			  	\begin{itemize}
+			  		\item 
+			  		\item
+			  	\end{itemize}
+			  \item[Request and Results Data structures:]
+			   \begin{itemize}
+			  		\item 
+			  		\item
+			  	\end{itemize}
 			\end{description}
 			
-		\subsection{Required Functionality}
+		\subsection{Required Functionality}\label{subsec:requiredfunctionionality}
 			%\begin{figure}[h]
 			%\includegraphics[width=4in]{imagename}
 			%\caption{Figure information}
 			%\end
 	
-		\subsection{Process Specifications}
+		\subsection{Process Specifications}\label{subsec:processspecification}
 			%\begin{figure}[h]
 			%\includegraphics[width=4in]{imagename}
 			%\caption{Figure information}
 			%\end
 		
-		\subsection{Domain Model}
+		\subsection{Domain Model}\label{subsec:domainmodel}
 			%\begin{figure}[h]
 			%\includegraphics[width=4in]{imagename}
 			%\caption{Figure information}
 			%\end
 		
 	\cleardoublepage
-	\section{Open Issues}
+	\section{Open Issues}\label{sec:issues}
 		\begin{itemize}
 		  \item The first item
 		  \item The second item
